2006-07-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-opentechpress-jp.el: New module.

2006-07-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el: Changes to handle <BASE> tag properly.
	(shimbun-make-mime-article): Accept a base URL of this current
	article as the 3rd optional argument.
	(shimbun-current-base-url): New function.
	(shimbun-make-html-contents): Call the above.
	(shimbun-from-address): Accept backends that have no address.

	* shimbun/sb-multi.el: New virtual class.

	* shimbun/sb-atmarkit.el: Use `shimbun-multi' class.
	(shimbun-multi-next-url, shimbun-multi-clear-contents): New
	methods.
	(shimbun-atmarkit-use-base-url): Abolished.
	(shimbun-article-url, shimbun-make-contents): Cancel the last
	change, because `shimbun-multi' class handles <BASE> tag properly.
	(shimbun-atmarkit-from-address): Abolished.

	* shimbun/sb-itmedia.el: Use `shimbun-multi' class.
	(shimbun-make-contents): Minimized.
	(shimbun-itmedia-make-contents)
	(shimbun-itmedia-clean-text-page): Removed.
	(shimbun-multi-next-url)
	(shimbun-multi-clear-contents)
	(shimbun-clear-contents): New methods to supercede a part of the
	above removed functions.

	* shimbun/sb-cnetnetworks.el: Removed.

	* shimbun/sb-zdnet-jp.el: Use `shimbun-multi' class instead of
	`shimbun-cnetnetworks' class.
	(shimbun-zdnet-jp-orphaned-group-list)
	(shimbun-zdnet-jp-content-start)
	(shimbun-zdnet-jp-content-end): Abolished.
	(shimbun-groups, shimbun-headers): Simplified.
	(shimbun-cnetnetworks-header-reconfig)
	(shimbun-cnetnetworks-clear-footer): Abolished.
	(shimbun-multi-next-url)
	(shimbun-multi-clear-contents)
	(shimbun-make-contents): New methods to supercede a part of the
	above abolished methods.

	* shimbun/sb-cnet-jp.el: Use `shimbun-multi' class instead of
	`shimbun-cnetnetworks' class.
	(shimbun-cnet-jp-group-alist): Follow the change of the site.
	(shimbun-cnetnetworks-header-reconfig)
	(shimbun-cnetnetworks-clear-footer): Abolished.
	(shimbun-multi-next-url)